--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
 	<div class="container">
 		<div class="wrapper">
 			<header class="header">
-				<h1>
-					Быки-Коровы
-					
-					<nobr><span>(Vanilla JS version)</span></nobr>
-				</h1>
+				<h1>Быки-Коровы</h1>
+				<p>(Vanilla JS version)</p>
 				<h3>Угадай 4-значное число, где цифры не повторяются</h3>
 				<h6></h6>
 			</header>
