--- a/index.html
+++ b/index.html
@@ -11,6 +11,36 @@
 
 <body>
 	<div class="container">
+		<button 
+			class="btn btn-info rules-btn" 
+			data-toggle="modal"
+			data-target="#rulesModal">
+			Правила
+		</button>
+		<div class="modal fade" 
+				id="rulesModal"
+				tabindex="-1"
+				role="dialog"
+				aria-labelledby="rulesLabel"
+				aria-hidden="true">
+			<div class="modal-dialog modal-dialog-centered" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="rulesLabel">Быки-Коровы Правила игры</h5>
+						<button class="close" 
+										data-dismiss="modal"
+										aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+					</div>
+					<div class="modal-footer">
+						<button class="btn btn-primary" data-dismiss="modal">Закрыть</button>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="wrapper">
 			<header class="header">
 				<h1>Быки-Коровы</h1>
@@ -21,7 +51,7 @@
 			<main class="main">
 				<form action="#">
 					<div class="form-group">
-						<input class="form-control" type="number" placeholder="Введите число">
+						<input class="form-control" type="number" placeholder="Введите число" name="numberInput">
 						<button class="btn btn-outline-primary hint disabled">Подсказка</button>
 						<button class="btn btn-primary check">Проверить число</button>
 						<button class="btn btn-outline-secondary restart">Новая игра</button>
@@ -39,6 +69,8 @@
 	<footer class="footer">
 		<p>Made by Mykola Kolomoyets &copy; 2020</p>
 	</footer>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 	<script src="script.js"></script>
 </body>
 
