--- a/index.html
+++ b/index.html
@@ -1,77 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Document</title>
-	<link rel="stylesheet" href="style.css">
+	<!-- PACKAGES LINKS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+	<!-- CUSTOM CSS -->
+	<link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-	<div class="container">
-		<button 
-			class="btn btn-info rules-btn" 
-			data-toggle="modal"
-			data-target="#rulesModal">
-			Правила
-		</button>
-		<div class="modal fade" 
-				id="rulesModal"
-				tabindex="-1"
-				role="dialog"
-				aria-labelledby="rulesLabel"
-				aria-hidden="true">
-			<div class="modal-dialog modal-dialog-centered" role="document">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title" id="rulesLabel">Быки-Коровы Правила игры</h5>
-						<button class="close" 
-										data-dismiss="modal"
-										aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</button>
-					</div>
-					<div class="modal-body">
-					</div>
-					<div class="modal-footer">
-						<button class="btn btn-primary" data-dismiss="modal">Закрыть</button>
-					</div>
+
+	<div class="main container">
+		<header class="header">
+			<h1 class="header__title"> 
+				<nobr>Cow-bull game</nobr> 
+			</h1>
+			<button class="header__rules 
+											btn 
+											btn-info" 
+							data-toggle="modal" 
+							data-target="#rulesModal">
+				?
+			</button>
+			<p class="header__subtitle">Vanilla JS version</p>
+		</header>
+		<main class="content" id="content">
+			<h5 class="content__moves">Ready?</h5>
+			<form action="#" 
+						class="content__form 
+										input-group-md">
+				<input type="number"  
+								class="content__input 
+												form-control" 
+								placeholder="Enter the number">
+				<button class="content__check 
+												btn 
+												btn-primary">
+					Check the number
+				</button>
+				<button class="content__restart 
+												btn 
+												btn-outline-secondary">
+					New game
+				</button>
+			</form>
+		</main>
+	</div>
+	<footer class="footer">
+		<div class="container">
+			<h6 class="footer__content">
+				Made by Mykola Kolomoyets. &copy; 2020
+				<nobr><span>v.1.0 (Stable)</span></nobr>
+			</h6>	
+		</div>
+	</footer>
+
+	<!-- ================================= -->
+	<!-- === THE BLOCK OF MODAL WINDOW === -->
+
+	<div class="modal fade" id="rulesModal" tabindex="-1" role="dialog" aria-labelledly="rulesLabel" aria-hidden="true">
+		<div class="modal-dialog
+								modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="rulesLabel">Bull-Cow game rules</h5>
+					<button class="close" data-dismiss="modal" alia-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<p>You gave to guess the 4-digit number, which has <b>unrepeatable</b> digits
+						<br>
+						For example, <i>1234</i> is <b>correct</b> <br>
+						And <i>1233</i> is <b>incorrect</b> <br>
+						When you will enter the number, you will see the number of <b>cows</b> and <b>bulls</b>.
+						
+					</p>
+					<ol>
+							<li><b>Cow</b> tells you then one of the digits is <b>correct</b> but its` position in the number is <b>incorrect</b></li>
+							<li><b>Bull</b> means that both digit and it`s position are <b>correct</b></li>
+						</ol>
+				</div>
+				<div class="modal-footer">
+					<button class="btn btn-primary" data-dismiss="modal">Close</button>
 				</div>
 			</div>
 		</div>
-		<div class="wrapper">
-			<header class="header">
-				<h1>Быки-Коровы</h1>
-				<p>(Vanilla JS version)</p>
-				<h3>Угадай 4-значное число, где цифры не повторяются</h3>
-				<h6></h6>
-			</header>
-			<main class="main">
-				<form action="#">
-					<div class="form-group">
-						<input class="form-control" type="number" placeholder="Введите число" name="numberInput">
-						<button class="btn btn-outline-primary hint disabled">Подсказка</button>
-						<button class="btn btn-primary check">Проверить число</button>
-						<button class="btn btn-outline-secondary restart">Новая игра</button>
-					</div>
-				</form>
-				<div class="result">
-					<h5></h5>
-				</div>
-				<div class="warnings"></div>
-				<div class="hintText"></div>
-			</main>
-		</div>
-
 	</div>
-	<footer class="footer">
-		<p>Made by Mykola Kolomoyets &copy; 2020</p>
-	</footer>
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-	<script src="script.js"></script>
-</body>
 
+	<!-- ================================= -->
+
+
+<!-- PACKEGES JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<!-- CUSTOM JS -->
+<script src="main.js"></script>
+</body>
 </html>
