--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 	<div class="main container">
 		<header class="header">
 			<h1 class="header__title"> 
-				<nobr>Cow-bull game</nobr> 
+				Cow-bull game
 			</h1>
 			<button class="header__rules 
 											btn 
 											btn-info" 
 							data-toggle="modal" 
 							data-target="#rulesModal">
-				?
+				Rules
 			</button>
 			<p class="header__subtitle">Vanilla JS version</p>
 		</header>
 		<main class="content" id="content">
-			<h5 class="content__moves">Ready?</h5>
+			<h2 class="content__moves">Ready?</h2>
 			<form action="#" 
 						class="content__form 
 										input-group-md">
@@ -51,21 +51,22 @@
 		<div class="container">
 			<h6 class="footer__content">
 				Made by Mykola Kolomoyets. &copy; 2020
-				<nobr><span>v.1.0 (Stable)</span></nobr>
+				<span>v.1.1 (Stable release)</span>
 			</h6>	
 		</div>
 	</footer>
 
 	<!-- ================================= -->
 	<!-- === THE BLOCK OF MODAL WINDOW === -->
+	<!-- ================================= -->
 
-	<div class="modal fade" id="rulesModal" tabindex="-1" role="dialog" aria-labelledly="rulesLabel" aria-hidden="true">
+	<div class="modal fade" id="rulesModal" tabindex="-1" role="dialog" aria-labelledby="rulesLabel" aria-hidden="true">
 		<div class="modal-dialog
 								modal-dialog-centered" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
 					<h5 class="modal-title" id="rulesLabel">Bull-Cow game rules</h5>
-					<button class="close" data-dismiss="modal" alia-label="Close">
+					<button class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
